<?xml version="1.0" encoding="utf-8"?>

<com.pauselabs.pause.view.tabs.SettingsView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Begin Contact List Scroll View -->

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settings_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:listSelector="@color/main"
        android:cacheColorHint="@color/transparent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:isScrollContainer="false"
        android:scrollbarStyle="outsideOverlay"
        android:smoothScrollbar="true"
        android:verticalScrollbarPosition="right"
        android:overScrollFooter="@android:color/transparent"
        android:footerDividersEnabled="false"
        android:stretchMode="columnWidth">

        <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name Visibility = GONE -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/nameBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:visibility="gone"
            app:frontnail="{fa-smile-o}"
            app:label="@string/name_settings_label"
            app:content="John"/>

        <!-- Gender Visibility = GONE -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/genderBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:visibility="gone"
            android:background="@null"
            app:frontnail="{fa-transgender}"
            app:label="@string/gender_settings_label"
            app:content="Male"/>

        <!-- Strangers -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/strangersBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:frontnail="{fa-user-secret}"
            app:label="@string/reply_to_strangers"/>

        <!-- Missed Calls -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/missedCallsBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-phone}"
            app:label="@string/reply_to_calls_settings_label"/>

        <!-- Replied Text Messages -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/receivedSMSBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-comment-o}"
            app:label="@string/reply_to_SMS_settings_label"/>

        <!-- Silence Settings Key -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/silentBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-bell-slash-o}"
            app:label="@string/activate_on_silence_settings_label"
            app:content=""/>

        <!-- Vibrate Settings Key -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/vibrateBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-unlink}"
            app:label="@string/activate_on_vibrate_settings_label"
            app:content=""/>

        <!-- Toasts Toggle Visibility = GONE -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/toastsBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-exclamation}"
            app:label="@string/toasts_label"
            app:content=""/>

        <!-- Voice Toggle Visibility = GONE -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/voiceBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            android:visibility="gone"
            app:frontnail="{fa-bullhorn}"
            app:label="@string/voice_label"
            app:content=""/>

        <!-- Reset to Default -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/defaultSettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:frontnail="{fa-refresh}"
            app:label="@string/default_settings_label"
            app:endnail="@drawable/ic_sms_icon"/>


        <!-- Rate Us URI -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/rateBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-heart-o}"
            app:label="@string/rate_us_settings_label"/>

        <!-- Contact Us Email Dialog -->

        <com.pauselabs.pause.model.SettingsButton
            android:id="@+id/contactBtn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:background="@null"
            app:frontnail="{fa-send-o}"
            app:label="@string/contact_us_label"
            app:endnail="@drawable/ic_sms_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:textAlignment="center"
            android:text="@string/born_in_detroit_settings_footer"
            android:gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>

</com.pauselabs.pause.view.tabs.SettingsView>