<?xml version="1.0" encoding="utf-8"?>

<com.pauselabs.pause.ui.SettingsLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Settings Page Title -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Settings Pull Up Menu Title -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ob_btn_height">
            
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_action_settings_gear"/>

                <!--<TextView-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="@dimen/ob_btn_height"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/settings_drawer_label"-->
                    <!--android:textSize="20sp"/>-->

        </RelativeLayout>

    <!-- Custom Scroll View -->

    <ScrollView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Name -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/nameBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:label="@string/name_settings_label"
                custom:content="John"/>

            <!-- Gender -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/genderBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:label="@string/gender_settings_label"
                android:background="@null"
                custom:content="Male"/>

            <!-- Missed Calls -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/missedCallsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/reply_to_calls_settings_label"/>

            <!-- Replied Text Messages -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/receivedSMSBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/reply_to_SMS_settings_label"/>

            <!-- BlackList -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/blacklistBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/blacklist_label"
                custom:content=""/>

            <!-- Volume Settings Key -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/volumeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/vibrate_label"
                custom:content="Yes"/>

            <!-- Voice Toggle -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/voiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/voice_label"
                custom:content="On"/>

            <!-- Email URI -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_section_label"
                style="@style/ListSeparatorTextView"/>

            <!-- Rate Us URI -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/rateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/rate_us_settings_label"
                custom:content="Please? Ü"/>


            <!-- Contact Us Email Dialog -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/contactBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/contact_us_label"
                custom:content="We Would Love To Hear From You"/>

            <!-- Help -->

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_label"
            style="@style/ListSeparatorTextView"/>

            <!-- Support URI -->

            <com.pauselabs.pause.views.SettingsButton
            android:id="@+id/supportBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            custom:label="@string/support_label"
            custom:content="We're Here to Help"/>

            <!-- Privacy Policy URI -->

            <com.pauselabs.pause.views.SettingsButton
            android:id="@+id/privacyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            custom:label="@string/privacy_policy_label"
            custom:content="Why We Protect Your Information"/>

            <!-- Terms URI -->

            <com.pauselabs.pause.views.SettingsButton
                android:id="@+id/termsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                custom:label="@string/terms_label"
                custom:content="Had to Have It"/>

            <!-- Footer - Change to Cool Made in Detroit ImageView -->

            <TextView
                android:id="@+id/versionFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Version 1.0.xx.x © 2014 Pause Labs, LLC"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    </LinearLayout>
</com.pauselabs.pause.ui.SettingsLayout>