<?xml version="1.0" encoding="utf-8"?>

<com.pauselabs.pause.view.tabs.SettingsView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<LinearLayout-->
        <!--android:id="@+id/slidingBottomList"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:orientation="vertical">-->

        <!-- Begin Contact List Scroll View -->


        <ScrollView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:listSelector="@color/pause_green_light"
            android:cacheColorHint="@color/transparent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:isScrollContainer="false"
            android:scrollbarStyle="outsideOverlay"
            android:smoothScrollbar="true"
            android:verticalScrollbarPosition="right"
            android:overScrollFooter="@android:color/transparent"
            android:footerDividersEnabled="false"
            android:stretchMode="columnWidth">

                <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <!-- Name -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/nameBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:label="@string/name_settings_label"
                    custom:content="John"/>

                <!-- Gender -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/genderBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/gender_settings_label"
                    custom:content="Male"/>

                <!-- Missed Calls -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/missedCallsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/reply_to_calls_settings_label"/>

                <!-- Replied Text Messages -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/receivedSMSBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/reply_to_SMS_settings_label"/>

                    <!-- Privacy List -->

                    <com.pauselabs.pause.view.SettingsButton
                        android:id="@+id/privacylistBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        custom:label="@string/blacklist_label"
                        custom:content=""/>

                <!-- Volume Settings Key -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/volumeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/vibrate_label"
                    custom:content="Yes"/>

                <!-- Voice Toggle -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/voiceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/voice_label"
                    custom:content="On"/>


                <!-- Toasts Toggle -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/toastsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/toasts_label"
                    custom:content="On"/>

                <!-- Feedback Label -->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/feedback_section_label"-->
                    <!--style="@style/ListSeparatorTextView"/>-->

                <!-- Rate Us URI -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/rateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/rate_us_settings_label"/>


                <!-- Contact Us Email Dialog -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/contactBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/contact_us_label" />

                <!-- Help Label -->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/help_label"-->
                    <!--style="@style/ListSeparatorTextView"/>-->

                <!-- Support URI -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/supportBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@null"
                    custom:label="@string/support_label" />

                <!-- Privacy Policy URI -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/privacyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    custom:label="@string/privacy_policy_label" />

                <!-- Terms URI -->

                <com.pauselabs.pause.view.SettingsButton
                    android:id="@+id/termsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:label="@string/terms_label" />

                <!-- Footer - Change to Cool Made in Detroit ImageView -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="\u00A0Born in Detroit\n\n&#9825; \n"
                    android:gravity="center_horizontal" />


            </LinearLayout>
        </ScrollView>

    <!--</LinearLayout>-->

</com.pauselabs.pause.view.tabs.SettingsView>