<?xml version="1.0" encoding="utf-8"?>
<com.pauselabs.pause.view.start.GenderView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <!-- Frame Layout for Word Mark PNG -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/ob_word_mark_height"
            android:contentDescription="@string/on_boarding_picture_content_description"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ob_full_face"
            android:layout_marginTop="20dp"/>

    </FrameLayout>

        <EditText
            android:id="@+id/ob_name"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/main"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/text_extra_large"
            android:textColorHint="@color/text"
            android:textIsSelectable="false"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@android:color/transparent"
            android:freezesText="false"
            android:inputType="textPersonName|textCapSentences"
            android:imeOptions="actionDone"
            android:hint="@string/on_boarding_name_hint"/>

            <!-- Male or Female -->

            <LinearLayout
                android:id="@+id/on_boarding_bottom_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <!-- Male -->

                <android.widget.IconButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/ob_btn_height"
                    android:layout_marginTop="@dimen/ob_btn_margin"
                    android:layout_weight="1"
                    android:background="@drawable/male_gender_pressed"
                    android:textColor="@drawable/male_gender_pressed"
                    android:textSize="@dimen/text_double_extra_large"
                    android:text="@string/ob_male_btn"/>

                <!-- Female -->

                <android.widget.IconButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/ob_btn_height"
                    android:layout_marginTop="@dimen/ob_btn_margin"
                    android:layout_weight="1"
                    android:background="@drawable/female_gender_pressed"
                    android:textColor="@drawable/female_gender_pressed"
                    android:textSize="@dimen/text_double_extra_large"
                    android:text="@string/ob_female_btn"/>

            </LinearLayout>

</com.pauselabs.pause.view.start.GenderView>

